--- a/src/app/sections/story-maps/story-map/story-map.component.html
+++ b/src/app/sections/story-maps/story-map/story-map.component.html
@@ -11,38 +11,41 @@
 <div class="summary leftTransition"  *ngIf="mapReady">
   <div>
     <div class="mask">
-      <h2 class="{{getCarouselPosition(0,3)}}">{{'Venta total €' | translate }}</h2>
-      <h2 class="{{getCarouselPosition(4,8)}}">{{'Litros totales' | translate }}</h2>
-      <h2 class="{{getCarouselPosition(9,13)}}">{{'Transacciones totales' | translate }}</h2>
-      <h2 class="{{getCarouselPosition(14,18)}}">{{'Incidencias totales' | translate }}</h2>
-      <h2 class="{{getCarouselPosition(19,23)}}">{{'Índice calidad (E3)' | translate }}</h2>
+      <h2 class="{{getCarouselPosition(0,3)}}">{{'Venta diaria €' | translate }}</h2>
+      <h2 class="{{getCarouselPosition(4,8)}}">{{'Litros diarios' | translate }}</h2>
+      <h2 class="{{getCarouselPosition(9,13)}}">{{'Transacciones diarias' | translate }}</h2>
+      <h2 class="{{getCarouselPosition(14,18)}}">{{'Incidencias diarias' | translate }}</h2>
+      <h2 class="{{getCarouselPosition(19,23)}}">{{'Calidad media (E3)' | translate }}</h2>
     </div>
     <div class="mask">
-      <app-counter class="current {{getCarouselPosition(0,3)}}" [step]="counterStep" [countTo]="totalSales" [duration]="counterDuration"></app-counter>
-      <app-counter class="current {{getCarouselPosition(4,8)}}" [step]="counterStep" [countTo]="liters" [duration]="counterDuration"></app-counter>
-      <app-counter class="current {{getCarouselPosition(9,13)}}" [step]="counterStep" [countTo]="transactionsNumber" [duration]="counterDuration"></app-counter>
-      <app-counter class="current {{getCarouselPosition(14,18)}}" [step]="counterStep" [countTo]="0" [duration]="counterDuration"></app-counter>
-      <app-counter class="current {{getCarouselPosition(19,23)}}" [step]="counterStep" [countTo]="quality" [duration]="counterDuration" [format]="'1.0-2'"></app-counter>
+      <app-counter class="current {{getCarouselPosition(0,3)}}" [step]="counterStep" [countTo]="accumulatedDaily.totalSales" [duration]="counterDuration"></app-counter>
+      <app-counter class="current {{getCarouselPosition(4,8)}}" [step]="counterStep" [countTo]="accumulatedDaily.liters" [duration]="counterDuration"></app-counter>
+      <app-counter class="current {{getCarouselPosition(9,13)}}" [step]="counterStep" [countTo]="accumulatedDaily.transactionsNumber" [duration]="counterDuration"></app-counter>
+      <app-counter class="current {{getCarouselPosition(14,18)}}" [step]="counterStep" [countTo]="accumulatedDaily.tot_incid" [duration]="counterDuration"></app-counter>
+      <app-counter class="current {{getCarouselPosition(19,23)}}" [step]="counterStep" [countTo]="accumulatedDaily.quality" [duration]="counterDuration" [format]="'1.0-2'"></app-counter>
     </div>
   </div>
-  <div *ngIf="salesComparedPreviousDay !== null || litersComparedPreviousDay !==null || transactionsComparedPreviousDay !== null || qualityComparedPreviousDay !== null" class="opacityTransition">
+  <div *ngIf="(currentFrame % 24) < 19 && (salesComparedPreviousDay !== null || litersComparedPreviousDay !==null || transactionsComparedPreviousDay !== null || qualityComparedPreviousDay !== null)" class="opacityTransition">
     <h3>{{'Variación con respecto' | translate}}<br>{{'a la misma hora del día anterior' | translate}}</h3>
     <div class="mask">
-      <app-counter class="compared {{salesComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(0,3)}}" [showSimbol]="true" [step]="counterStep" [countTo]="salesComparedPreviousDay" [duration]="counterDuration"></app-counter>
-      <app-counter class="compared {{litersComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(4,8)}}" [showSimbol]="true" [step]="counterStep" [countTo]="litersComparedPreviousDay" [duration]="counterDuration"></app-counter>
-      <app-counter class="compared {{transactionsComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(9,13)}}" [showSimbol]="true" [step]="counterStep" [countTo]="transactionsComparedPreviousDay" [duration]="counterDuration"></app-counter>
-      <app-counter class="compared positive {{getCarouselPosition(14,18)}}" [showSimbol]="true" [step]="counterStep" [countTo]="0" [duration]="counterDuration"></app-counter>
-      <app-counter class="compared {{qualityComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(19,23)}}" [showSimbol]="true" [step]="counterStep" [countTo]="qualityComparedPreviousDay" [duration]="counterDuration" [format]="'1.0-2'"></app-counter>
+      <app-counter class="compared {{salesComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(0,3)}}" [showSimbol]="true" [step]="counterStep" [countTo]="salesComparedPreviousDay" [unit]="'€'" [duration]="counterDuration"></app-counter>
+      <app-counter class="compared {{litersComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(4,8)}}" [showSimbol]="true" [step]="counterStep" [countTo]="litersComparedPreviousDay"  [unit]="'litros' | translate" [duration]="counterDuration"></app-counter>
+      <app-counter class="compared {{transactionsComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(9,13)}}" [showSimbol]="true" [step]="counterStep" [countTo]="transactionsComparedPreviousDay" [unit]="'transacciones' | translate" [duration]="counterDuration"></app-counter>
+      <app-counter class="compared {{incidencesComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(14,18)}}" [showSimbol]="true" [step]="counterStep" [countTo]="incidencesComparedPreviousDay" [unit]="'incidencias' | translate" [duration]="counterDuration"></app-counter>
+      <!-- <app-counter class="compared {{qualityComparedPreviousDay >= 0 ? 'positive': ''}} {{getCarouselPosition(19,23)}}" [showSimbol]="true" [step]="counterStep" [countTo]="qualityComparedPreviousDay" [duration]="counterDuration" [format]="'1.0-2'"></app-counter> -->
     </div>
   </div>
 </div>
-<app-category-tab *ngIf="mapReady" class="leftTransition" [maxOil]="limits?.oil.max" [maxNonOil]="limits?.nonOil.max" [observableData]="storyMapService.currentData"></app-category-tab>
+<app-category-tab *ngIf="mapReady" class="leftTransition" [maxOil]="limits?.oil.max" [maxNonOil]="limits?.nonOil.max" [dataAgg]="accumulatedDaily" [observableData]="storyMapService.currentData"></app-category-tab>
 <div class="title">
   <img height="46" src="/assets/symbol-repsol.png">
   <div>
     <h3>{{'Consumo' | translate}}</h3>
     <h1>{{'Operación salida verano 2017' | translate}}</h1>
-    <h4><span></span><span></span><span></span>{{'Mapa de Volumen de ventas por estación' | translate}}</h4>
+    <div class="legend">
+      <div class="circles"><span></span><span></span><span></span><p>{{'Mapa de Volumen de ventas por estación' | translate}}</p></div>
+      <div class="ramp"><p>{{'Intensidad baja' | translate}}</p> <span></span><span></span><span></span><span></span> <p>{{'Intensidad alta' | translate}}</p></div>
+    </div>
   </div>
 </div>
 <div *ngIf="mapReady && stationData.name !== null" class="stationDetail opacityTransition">
@@ -53,9 +56,7 @@
   </div>
   <h4>{{'E.S.' | translate}} {{stationData.name}} · <span>{{stationData.address}}</span></h4>
 </div>
-<div class="logo">
-  <span>Engineered by Geographica</span>
-  <app-geo-logo [geoHeight]="24"></app-geo-logo>
-</div>
+
+<app-geo-logo [geoHeight]="24" [showCarto]="true" [whiteCarto]="true"></app-geo-logo>
 
 <app-station-popup #stationPopupEl [data]="stationData">{{currentFrame}}</app-station-popup>
