--- a/src/app/sections/story-maps/story-map/story-map.component.html
+++ b/src/app/sections/story-maps/story-map/story-map.component.html
@@ -44,7 +44,7 @@
     <h1>{{'Operación salida verano 2017' | translate}}</h1>
     <div class="legend">
       <div class="circles"><span></span><span></span><span></span><p>{{'Mapa de Volumen de ventas por estación' | translate}}</p></div>
-      <div class="ramp"><p>{{'Intensidad baja' | translate}}</p> <span></span><span></span><span></span><span></span> <p>{{'Intensidad alta' | translate}}</p></div>
+      <div class="ramp"><p>{{'Intensidad del tráfico' | translate}}: {{'Baja' | translate}}</p> <span></span><span></span><span></span><span></span> <p>{{'Alta' | translate}}</p></div>
     </div>
   </div>
 </div>
