waylet logo and more layout

--- a/src/app/sections/story-maps/component/station-popup/station-popup.component.html
+++ b/src/app/sections/story-maps/component/station-popup/station-popup.component.html
@@ -6,7 +6,7 @@
 <div class="allInfo">
   <div class="open-label">{{'Abierta' | translate}}</div>
   <div *ngIf="data.image" class="image" [ngStyle]="{'background-image': 'url(/assets/stations/' + data.image + ')'}"></div>
-  <div class="services">
+  <div class="services" *ngIf="currentTab === 'summary'">
     <img src="/assets/icons/services/24hours.svg" alt="24 hours">
     <img src="/assets/icons/services/premium-gas.svg" alt="premium gas">
     <img src="/assets/icons/services/auto-gas.svg" alt="auto gas">
@@ -30,27 +30,33 @@
     <button class="waylet" 
       [class.selected]="currentTab === 'waylet'"
       (click)="setTab('waylet')">
+      <img src="/assets/waylet.png" />
       {{'Waylet' | translate}}
     </button>
   </div>
-  <div class="content">
-    <div>
-      <app-counter [step]="counterStep" [countTo]="data.liters" [duration]="counterDuration"></app-counter>
-      m<sup>3</sup>
-      <span>{{'de combustible' | translate}}</span>
+  <ng-container *ngIf="currentTab === 'waylet'">
+    <h5 class="info">{{'Operación destacada con Waylet / hora' | translate}}</h5>
+  </ng-container>
+  <ng-container *ngIf="currentTab === 'summary'">
+    <div class="content">
+      <div>
+        <app-counter [step]="counterStep" [countTo]="data.liters" [duration]="counterDuration"></app-counter>
+        m<sup>3</sup>
+        <span>{{'de combustible' | translate}}</span>
+      </div>
+      <div>
+        <app-counter [step]="counterStep" [countTo]="data.transactions" [duration]="counterDuration"></app-counter>
+        <span>{{'transacciones' | translate}}</span>
+      </div>
+      <div>
+        <app-counter [step]="counterStep" [countTo]="data.incidences" [duration]="counterDuration"></app-counter>
+        <span>{{'incidencias' | translate}}</span>
+      </div>
+      <div>
+        <app-counter [step]="counterStep" [countTo]="data.quality" [unit]="'/10'" [format]="'1.0-2'" [duration]="counterDuration"></app-counter>
+        <span>{{'Calidad E3 trimestral' | translate}}</span>
+      </div>
     </div>
-    <div>
-      <app-counter [step]="counterStep" [countTo]="data.transactions" [duration]="counterDuration"></app-counter>
-      <span>{{'transacciones' | translate}}</span>
-    </div>
-    <div>
-      <app-counter [step]="counterStep" [countTo]="data.incidences" [duration]="counterDuration"></app-counter>
-      <span>{{'incidencias' | translate}}</span>
-    </div>
-    <div>
-      <app-counter [step]="counterStep" [countTo]="data.quality" [unit]="'/10'" [format]="'1.0-2'" [duration]="counterDuration"></app-counter>
-      <span>{{'Calidad E3 trimestral' | translate}}</span>
-    </div>
-  </div>
-  <h5 class="info">{{'Datos acumulados diario' | translate}}</h5>
+    <h5 class="info">{{'Datos acumulados diario' | translate}}</h5>
+  </ng-container>
 </div>
