--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -38,6 +38,7 @@
        url('/assets/fonts/repsolviet-regular-webfont.svg#svgFontName') format('svg');
 }
 
+$colorBorder: #383D4C;
 $colorWaylet: #FF8200;
 $colorOpen: #0CB200;
 $colorPrimary: #e67600;
