--- a/src/app/sections/story-maps/component/station-popup/station-popup.component.scss
+++ b/src/app/sections/story-maps/component/station-popup/station-popup.component.scss
@@ -3,7 +3,7 @@
   // width: 244px;
   border: 2px solid #F0F0F0;
   border-radius: 2px;
-  background-color: #041E42;
+  background-color: $colorSecondary7;
   color: $colorSecondary1;
   display: block;
 
@@ -59,7 +59,7 @@
       flex: 1 1 50%;
       margin: 0;
       border: none;
-      border-bottom: 2px solid #383D4C;
+      border-bottom: 2px solid $colorBorder;
       background: transparent;
       color: $colorSecondary4;
       @include font(medium);
@@ -85,13 +85,32 @@
       }
     }
   }
+  .waylet-wrapper {
+    position: relative;
+    padding-bottom: 12px;
+    .info {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      z-index: 1;
+    }
+    &:after {
+      content: '';
+      top: 0;
+      left: 0;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to top, $colorSecondary7 0%, transparent 80%);
+    }
+  }
   .waylet-item {
     padding: 12px 14px;
     font-size: 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #383D4C;
+    border-bottom: 1px solid $colorBorder;
     small {
       font-size: 12px;
       margin: 0 12px;
