--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -52,6 +52,9 @@ $colorSecondary7: #041E42;
 $colorSecondary8: #003B5C;
 $colorSecondary9: #FFB81C;
 
+$colorTempBorder: #9C9081;
+$colorTempBg: #000F16;
+
 $colorBlack: #000;
 $colorN100: #191919;
 $colorN90: #2B2B2B;
