--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -49,6 +49,7 @@ body {
   .mapboxgl-popup-content {
     padding: 0;
     border-radius: 2px;
+    background-color: transparent;
   }
 
   .mapboxgl-popup-tip {
