--- a/src/app/sections/story-maps/component/station-popup/station-popup.component.html
+++ b/src/app/sections/story-maps/component/station-popup/station-popup.component.html
@@ -34,15 +34,16 @@
       {{'Waylet' | translate}}
     </button>
   </div>
-  <div class="waylet-wrapper" *ngIf="currentTab === 'waylet'">
-    <div class="waylet-item topTransition"
+  <ul class="waylet-wrapper" 
+    *ngIf="currentTab === 'waylet'">
+    <li class="waylet-item bottomTransition"
       *ngFor="let item of data.listWaylet; let index = index;">
       <span [class]="item.level | lowercase">{{item.id}}</span>
       <small>{{item.date | date: 'dd MMM HH:mm'}}</small>
       <strong>{{item.amount | number: '1.2-2'}} €</strong>
-    </div>
+    </li>
     <h5 class="info">{{'Operación destacada con Waylet / hora' | translate}}</h5>
-  </div>
+  </ul>
   <ng-container *ngIf="currentTab === 'summary'">
     <div class="content">
       <div>
