--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -97,12 +97,14 @@ body {
 
   @keyframes bottomTransition{
     from {
-      transform: translateY(100%);
+      max-height: 0;
       opacity: 0;
+      padding: 0 10px;
     }
     to {
-      transform: translateY(0);
+      max-height: 100%;
       opacity: 1;
+      padding: 12px 10px;
     }
   }
 
